--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.12.3",
     "mongoose": "^4.0.2",
     "validator": "^3.39.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ThadeuBrito/express_api_sample.git"
   }
 }
